--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blastn_plus.nt.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blastn_plus.nt.config
@@ -31,7 +31,7 @@ $;REMOTE$;=0
 $;DATABASE_PATH$; = $;NCBI_BLAST_NT$;
 
 [output]
-$;OUTPUT_TOKEN$; = default
+$;OUTPUT_TOKEN$; = nt
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;BSML_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.bsml.list
 $;BTAB_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.btab.list
