--- a/package-lgtseek/software.config
+++ b/package-lgtseek/software.config
@@ -18,8 +18,8 @@ $;PICARD_TOOLS$;=/opt/packages/picard/build/libs/picard.jar
 $;PRINSEQ_EXEC$;=/opt/packages/prinseq/prinseq-lite.pl
 $;JAVA_EXEC$;=/usr/bin/java
 
-[component ncbi-blastn]
-$;BLASTALL_EXEC$;=/usr/bin/blastn
+[component blastn_plus]
+$;BLASTPLUS_BIN$;=/usr/bin
 
 [component sra2fastq]
 $;SRA_TOOLS_BIN$;=/opt/packages/sra-tools/
