--- a/package-lgtseek/docs/blastn_plus.config
+++ b/package-lgtseek/docs/blastn_plus.config
@@ -47,7 +47,7 @@ $;PIPELINE_TOKEN$; = unnamed
 ;;To only produce raw blast output add;
 ;;$;SKIP_WF_COMMAND$;=add create bsml list,convert btab to bsml,store config params,dtd validation
 ;;
-$;SKIP_WF_COMMAND$;=
+$;SKIP_WF_COMMAND$;=convert raw to btab,add create bsml list,convert raw to bsml,compress raw output,store config params,dtd validation,create btab list
 
 
 ;The version,revision,tag here is set by an interpolated CVS tag
