--- a/package-lgtseek/docs/blastn_plus.config
+++ b/package-lgtseek/docs/blastn_plus.config
@@ -10,6 +10,11 @@ $;EXPECT$; = 1e-5
 $;FILTER$; = no
 ;-max_target_seqs Maximum number of aligned sequences to keep default=150
 $;MAX_TARGET_SEQS$; = 150
+;; File with a list of GIs to filter from
+$;GI_FILE$;=
+;; If set to 1, will use -negative_gilist to exclude GIs from file, otherwise use -gilist to restrict to only these GIs
+;; Works only with local searches
+$;EXCLUDE_GIS$;=
 $;OTHER_OPTS$; =
 $;COMPRESS_RAW_OUTPUT$; = 0
 $;COMPRESS_BSML_OUTPUT$; = 0
@@ -18,6 +23,7 @@ $;FILTER_HSPS_FOR_STATS$;=1
 ;; Split output to one query sequence per file
 $;SPLIT_BSML$;=0
 $;SPLIT_BTAB$;=0
+
 
 [input]
 $;INPUT_FILE_LIST$; =
@@ -47,7 +53,7 @@ $;PIPELINE_TOKEN$; = unnamed
 ;;To only produce raw blast output add;
 ;;$;SKIP_WF_COMMAND$;=add create bsml list,convert btab to bsml,store config params,dtd validation
 ;;
-$;SKIP_WF_COMMAND$;=convert raw to btab,add create bsml list,convert raw to bsml,compress raw output,store config params,dtd validation,create btab list
+$;SKIP_WF_COMMAND$;=
 
 
 ;The version,revision,tag here is set by an interpolated CVS tag
