--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blastn_plus.nt.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blastn_plus.nt.config
@@ -10,6 +10,10 @@ $;EXPECT$; = 1e-5
 $;FILTER$; = no
 ;-max_target_seqs Maximum number of aligned sequences to keep default=150
 $;MAX_TARGET_SEQS$; = 150
+;; File with a list of GIs to filter from
+$;GI_FILE$;=
+;; If set to 1, will use -negative_gilist to exclude GIs from file, otherwise use -gilist to restrict to only these GIs
+$;EXCLUDE_GIS$;=
 $;OTHER_OPTS$; =
 $;COMPRESS_RAW_OUTPUT$; = 0
 $;COMPRESS_BSML_OUTPUT$; = 0
@@ -48,7 +52,6 @@ $;PIPELINE_TOKEN$; = unnamed
 ;;$;SKIP_WF_COMMAND$;=add create bsml list,convert btab to bsml,store config params,dtd validation
 ;;
 $;SKIP_WF_COMMAND$;=convert raw to btab,add create bsml list,convert raw to bsml,compress raw output,store config params,dtd validation,create btab list
-
 
 ;The version,revision,tag here is set by an interpolated CVS tag
 $;VERSION$; = $Name$
