fixing some bugs in lgt_bwa

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_BWA_Index/lgt_build_bwa_index.refseq.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_BWA_Index/lgt_build_bwa_index.refseq.config
@@ -4,6 +4,7 @@ classification = LGT
 [parameters]
 ;;This is the 'bwa index' algorithm option (choose between "is" or "bwtsw").
 ;; 'bwtsw' is better for long genomes while 'is' is better for short genomes (filesize < 2Gb)
+;; If left blank the 'bwa index' command will choose the algorithm automatically
 $;ALGORITHM$;=bwtsw
 
 [input]
