various changes on what should be kept in lgt post processing step

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.host_only.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.host_only.config
@@ -1,6 +1,7 @@
 [lgt_bwa recipient]
 $;INPUT_FILE$; = $;HOST_REFERENCE$;
 $;INPUT_FILE_LIST$; = $;HOST_LIST$;
+$;KEEP_MM$; = 0
 
 [lgt_bwa lgt]
 $;INPUT_FILE$; = $;REFSEQ_REFERENCE$;
