fixed bug in blast_plus command

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blastn_plus.nt.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blastn_plus.nt.config
@@ -13,7 +13,7 @@ $;MAX_TARGET_SEQS$; = 150
 ;; File with a list of GIs to filter from
 $;GI_FILE$;=
 ;; If set to 1, will use -negative_gilist to exclude GIs from file, otherwise use -gilist to restrict to only these GIs
-$;EXCLUDE_GIS$;=
+$;EXCLUDE_GIS$;=0
 $;OTHER_OPTS$; =
 $;COMPRESS_RAW_OUTPUT$; = 0
 $;COMPRESS_BSML_OUTPUT$; = 0
