--- a/package-lgtseek/docs/blastn_plus.config
+++ b/package-lgtseek/docs/blastn_plus.config
@@ -14,7 +14,7 @@ $;MAX_TARGET_SEQS$; = 150
 $;GI_FILE$;=
 ;; If set to 1, will use -negative_gilist to exclude GIs from file, otherwise use -gilist to restrict to only these GIs
 ;; Works only with local searches
-$;EXCLUDE_GIS$;=
+$;EXCLUDE_GIS$;=0
 $;OTHER_OPTS$; =
 $;COMPRESS_RAW_OUTPUT$; = 0
 $;COMPRESS_BSML_OUTPUT$; = 0
