--- a/package-lgtseek/docs/gather_lgtview_files.config
+++ b/package-lgtseek/docs/gather_lgtview_files.config
@@ -5,6 +5,8 @@ classification = utility
 ;; Run ID obtained from the Sequence Read Archive
 $;RUN_ID$;=
 
+;; Path TO LGT-classified BAM output file
+$;LGT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/lgt_bwa_post_process/$;PIPELINEID$;_default/lgt_bwa_post_process.lgt_host.bam.list
 ;; Path to LGT by-clone.txt file, containing various information for both donor and host
 $;LGT_CLONE_OUT$;=
 ;; Path to concatenated m8 BlastN results
