--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_BWA_Index/lgt_build_bwa_index.recipient.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_BWA_Index/lgt_build_bwa_index.recipient.config
@@ -5,7 +5,7 @@ classification = LGT
 ;;This is the 'bwa index' algorithm option (choose between "is" or "bwtsw").
 ;; 'bwtsw' is better for long genomes while 'is' is better for short genomes (filesize < 2Gb)
 ;; If left blank the 'bwa index' command will choose the algorithm automatically
-$;ALGORITHM$;=is
+$;ALGORITHM$;=
 
 [input]
 $;INPUT_FILE_LIST$; =
