adding taxonomy dumps to mongodb components

--- a/package-lgtseek/software.config
+++ b/package-lgtseek/software.config
@@ -9,6 +9,7 @@
 $;BWA_EXEC$;=/opt/packages/bwa/bwa
 $;SAMTOOLS_BIN$;=/opt/packages/samtools/bin
 $;SAMTOOLS_EXEC$;=/opt/packages/samtools/bin/samtools
+$;NCBI_TAX_BIN$;=/local/db//taxdump/
 
 [common inputs]
 $;NCBI_BLAST_NT$; = nt
