expanding output for the gather_lgtview_files output

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_Post_Analysis/gather_lgtview_files.default.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_Post_Analysis/gather_lgtview_files.default.config
@@ -5,8 +5,10 @@ classification = utility
 ;; Run ID obtained from the Sequence Read Archive
 $;RUN_ID$;=
 
-;; Path TO LGT-classified BAM output file
+;; Path to various classified BAM output files
 $;LGT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/lgt_bwa_post_process/$;PIPELINEID$;_default/lgt_bwa_post_process.lgt_host.bam.list
+$;RECIPIENT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/lgt_bwa_post_process/$;PIPELINEID$;_default/lgt_bwa_post_process.recipient.bam.list
+$;MB_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/lgt_bwa_post_process/$;PIPELINEID$;_default/lgt_bwa_post_process.microbiome.bam.list
 ;; Path to LGT by-clone.txt file, containing various information for both donor and host
 $;LGT_CLONE_OUT$;=$;REPOSITORY_ROOT$;/output_repository/blast_lgt_finder/$;PIPELINEID$;_lgt/i1/g1/blastn_by_clone.txt
 ;; Path to concatenated m8 BlastN results
