--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_mpileup.lgt_host.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_mpileup.lgt_host.config
@@ -14,7 +14,7 @@ $;INPUT_DIRECTORY$; =
 $;INPUT_EXTENSION$; = fsa
 
 [output]
-$;OUTPUT_TOKEN$; = lgt
+$;OUTPUT_TOKEN$; = lgt_host
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;MPILEUP_OUTPUT_LIST$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;/lgt_mpileup.list
 
