renaming files and organizing pipeline layout

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_bwa_post_process.default.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_bwa_post_process.default.config
@@ -20,7 +20,7 @@ $;INPUT_EXTENSION$; =
 [output]
 $;OUTPUT_TOKEN$; = default
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-$;MB_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.microbiome.bam.list
+$;MB_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.donor.bam.list
 $;RECIPIENT_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.recipient.list
 $;LGT_H_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.lgt_host.bam.list
 $;SINGLE_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.single_map.bam.list
