--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/sam2lca.donor.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/sam2lca.donor.config
@@ -15,14 +15,14 @@ $;TAXONCOLL$; = gi2taxonnuc
 
 [input]
 ;; List containing BAM file after BWA alignment
-$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/lgt_bwa/$;PIPELINEID$;_lgt/lgt_bwa.bam.list
+$;INPUT_FILE_LIST$; =$;REPOSITORY_ROOT$;/output_repository/lgt_bwa/$;PIPELINEID$;_mb/lgt_bwa.bam.list
 $;INPUT_FILE$; =
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
 $;INPUT_EXTENSION$; = raw
 
 [output]
-$;OUTPUT_TOKEN$; = lgt
+$;OUTPUT_TOKEN$; = donor
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.lca.list
 
