--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/filter_dups_lc_seqs.donor.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/filter_dups_lc_seqs.donor.config
@@ -2,33 +2,33 @@
 classification = LGT
 
 [parameters]
-;Location of the ncbi taxonomy files (nodes.dmp and names.dmp)
-$;NCBITAX$; = $;NCBI_TAX_BIN$;
-;Location of the gi_taxid_nucl.dmp file for nucleotides or gi_taxid_prot.dmp file for proteins
-$;GI2TAX$; =
-;Host name of the mongo database
-$;HOST$; = revan.igs.umaryland.edu:10001
-;Name of the gi database in mongo
-$;TAXONDB$; = gi2taxon
-;;Name of the gi collection in mongo.
-$;TAXONCOLL$; = gi2taxonnuc
+;; Abbreviation used to name post-processing tab file
+$;PREFIX$;=donor
+;; If flag is present, will remove dupliations of sequences
+$;RM_DUPLICATES$;=1
+;; If flag is present, will remove sequences deemed to have low complexity
+$;RM_LOW_COMPLEXITY$;=1
+;; Method used to filter out low complexity seq.  Default is 'dust'
+$;LC_METHOD$;=dust
+;; Threshold for filtering low complexity seqs. Default is 7
+$;LC_THRESHOLD$;=7
 
 [input]
-;; List containing BAM file after BWA alignment
-$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/lgt_bwa/$;PIPELINEID$;_lgt/lgt_bwa.bam.list
+;; BAM file
 $;INPUT_FILE$; =
+$;INPUT_FILE_LIST$; =$;REPOSITORY_ROOT$;/output_repository/lgt_bwa_post_process/$;PIPELINEID$;_default/lgt_bwa_post_process.donor.bam.list
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
-$;INPUT_EXTENSION$; = raw
+$;INPUT_EXTENSION$; =
 
 [output]
-$;OUTPUT_TOKEN$; = lgt
+$;OUTPUT_TOKEN$; = donor
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-$;OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.lca.list
+$;BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.bam.list
 
 [component]
-$;COMPONENT_NAME$; = sam2lca
-$;DESCRIPTION$; = Find lowest common ancestor through a filtered BAM alignment file
+$;COMPONENT_NAME$; = filter_dups_lc_seqs
+$;DESCRIPTION$; = Lateral Genome Transfer - filter duplicate and low_complexity seqs
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
 
@@ -55,4 +55,4 @@ $;PIPELINEID$; =
 $;PROJECT_CONFIG$;=
 
 [dce]
-$;MEMORY$;=2048
+$;MEMORY$;=5120
