--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_mpileup.donor_donor.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_mpileup.donor_donor.config
@@ -2,40 +2,32 @@
 classification = LGT
 
 [parameters]
-;Location of the ncbi taxonomy files (nodes.dmp and names.dmp
-$;NCBITAX$; = $;NCBI_TAX_BIN$;
-;Location of the gi_taxid_nucl.dmp file for nucleotides or gi_taxid_prot.dmp file for proteins
-$;GI2TAX$; =
-;Host name of the mongo database
-$;HOST$; = revan.igs.umaryland.edu:10001
-;Name of the gi database in mongo
-$;TAXONDB$; = gi2taxon
-;;Name of the gi collection in mongo.
-$;TAXONCOLL$; = gi2taxonnuc
+;; Fasta reference file.  If using in LGT pipeline, this would be a reference to the host sequence.  A list file is also optional
+$;FASTA_REFERENCE$; =
 
 [input]
-;; List containing BAM file after BWA alignment
-$;INPUT_FILE_LIST$; =$;REPOSITORY_ROOT$;/output_repository/lgt_bwa/$;PIPELINEID$;_mb/lgt_bwa.bam.list
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_donor/filter_dups_lc_seqs.bam.list
+;; A BAM file that has been filtered of duplicated and low-complexity reads
 $;INPUT_FILE$; =
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
-$;INPUT_EXTENSION$; = raw
+$;INPUT_EXTENSION$; = fsa
 
 [output]
-$;OUTPUT_TOKEN$; = mb
+$;OUTPUT_TOKEN$; = donor_donor
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-$;OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.lca.list
+$;MPILEUP_OUTPUT_LIST$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;/lgt_mpileup.list
 
 [component]
-$;COMPONENT_NAME$; = sam2lca
-$;DESCRIPTION$; = Find lowest common ancestor through a filtered BAM alignment file
+$;COMPONENT_NAME$; = lgt_mpileup
+$;DESCRIPTION$; = none
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
 
 ;The version,revision,tag here is set by an interpolated CVS tag
-$;VERSION$; = 2.0
+$;VERSION$; = $Name$
 $;RELEASE_TAG$; = $Name$
-$;REVISION$;            = $Revision: 5801 $
+$;REVISION$;            = $Revision$
 
 $;TEMPLATE_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.xml
 $;ITERATOR1$; = i1
@@ -55,4 +47,4 @@ $;PIPELINEID$; =
 $;PROJECT_CONFIG$;=
 
 [dce]
-$;MEMORY$;=2048
+$;MEMORY$;=5120
