--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_mpileup.rec_rec.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_mpileup.rec_rec.config
@@ -2,40 +2,32 @@
 classification = LGT
 
 [parameters]
-;; Abbreviation used to name post-processing tab file
-$;PREFIX$;=lgt
-;; If flag is present, will remove dupliations of sequences
-$;RM_DUPLICATES$;=1
-;; If flag is present, will remove sequences deemed to have low complexity
-$;RM_LOW_COMPLEXITY$;=1
-;; Method used to filter out low complexity seq.  Default is 'dust'
-$;LC_METHOD$;=dust
-;; Threshold for filtering low complexity seqs. Default is 7
-$;LC_THRESHOLD$;=7
+;; Fasta reference file.  If using in LGT pipeline, this would be a reference to the host sequence.  A list file is also optional
+$;FASTA_REFERENCE$; =
 
 [input]
-;; BAM file
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_recipient/filter_dups_lc_seqs.bam.list
+;; A BAM file that has been filtered of duplicated and low-complexity reads
 $;INPUT_FILE$; =
-$;INPUT_FILE_LIST$;=$;REPOSITORY_ROOT$;/output_repository/lgt_bwa_post_process/$;PIPELINEID$;_default/lgt_bwa_post_process.recipient.bam.list
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
-$;INPUT_EXTENSION$; =
+$;INPUT_EXTENSION$; = fsa
 
 [output]
-$;OUTPUT_TOKEN$; = lgt
+$;OUTPUT_TOKEN$; = rec_rec
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-$;BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.bam.list
+$;MPILEUP_OUTPUT_LIST$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;/lgt_mpileup.list
 
 [component]
-$;COMPONENT_NAME$; = filter_dups_lc_seqs
-$;DESCRIPTION$; = Lateral Genome Transfer - filter duplicate and low_complexity seqs
+$;COMPONENT_NAME$; = lgt_mpileup
+$;DESCRIPTION$; = none
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
 
 ;The version,revision,tag here is set by an interpolated CVS tag
-$;VERSION$; = 2.0
+$;VERSION$; = $Name$
 $;RELEASE_TAG$; = $Name$
-$;REVISION$;            = $Revision: 5801 $
+$;REVISION$;            = $Revision$
 
 $;TEMPLATE_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.xml
 $;ITERATOR1$; = i1
