adding script to cp lgt list files

--- a/package-lgtseek/docs/gather_lgtview_files.config
+++ b/package-lgtseek/docs/gather_lgtview_files.config
@@ -8,7 +8,7 @@ $;RUN_ID$;=
 ;; Path to various classified BAM output files
 $;LGT_BAM_OUT$;=
 $;RECIPIENT_BAM_OUT$;=
-$;MB_BAM_OUT$;=
+$;DONOR_BAM_OUT$;=
 ;; Path to LGT by-clone.txt file, containing various information for both donor and host
 $;LGT_CLONE_OUT$;=
 ;; Path to concatenated m8 BlastN results
