--- a/package-lgtseek/docs/gather_lgtview_files.config
+++ b/package-lgtseek/docs/gather_lgtview_files.config
@@ -31,6 +31,7 @@ $;OUTPUT_LIST$; =
 [component]
 $;COMPONENT_NAME$; = gather_lgtview_files
 $;DESCRIPTION$; = none
+$;SKIP_WF_COMMAND$; = 
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
 
