adding mpileup to list of outputs

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_mpileup.all_donor.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_mpileup.all_donor.config
@@ -14,7 +14,7 @@ $;INPUT_DIRECTORY$; =
 $;INPUT_EXTENSION$; = fsa
 
 [output]
-$;OUTPUT_TOKEN$; = donor_donor
+$;OUTPUT_TOKEN$; = all_donor
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;MPILEUP_OUTPUT_LIST$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;/lgt_mpileup.list
 
