--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_Post_Analysis/gather_lgtview_files.default.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_Post_Analysis/gather_lgtview_files.default.config
@@ -9,6 +9,12 @@ $;RUN_ID$;=
 $;LGT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt/filter_dups_lc_seqs.bam.list
 $;RECIPIENT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_recipient/filter_dups_lc_seqs.bam.list
 $;DONOR_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_donor/filter_dups_lc_seqs.bam.list
+;; Path to various mpileup output files
+$;LGT_RECIPIENT_MPILEUP$;=$;REPOSITORY_ROOT$;/output_repository/lgt_mpileup/$;PIPELINEID$;_lgt_recipient/lgt_mpileup.list
+$;LGT_DONOR_MPILEUP$;=$;REPOSITORY_ROOT$;/output_repository/lgt_mpileup/$;PIPELINEID$;_lgt_donor/lgt_mpileup.list
+$;ALL_RECIPIENT_MPILEUP$;=$;REPOSITORY_ROOT$;/output_repository/lgt_mpileup/$;PIPELINEID$;_all_recipient/lgt_mpileup.list
+$;ALL_DONOR_MPILEUP$;=$;REPOSITORY_ROOT$;/output_repository/lgt_mpileup/$;PIPELINEID$;_all_donor/lgt_mpileup.list
+
 ;; Path to LGT by-clone.txt file, containing various information for both donor and host
 $;LGT_CLONE_OUT$;=$;REPOSITORY_ROOT$;/output_repository/blast_lgt_finder/$;PIPELINEID$;_lgt/i1/g1/blastn_by_clone.txt
 ;; Path to concatenated m8 BlastN results
