edits to software.config file

--- a/package-lgtseek/software.config
+++ b/package-lgtseek/software.config
@@ -17,7 +17,7 @@ $;NCBI_BLAST_NT$; = nt
 [component filter_dups_lc_seqs]
 $;PICARD_TOOLS$;=/opt/packages/picard/build/libs/picard.jar
 $;PRINSEQ_EXEC$;=/opt/packages/prinseq/prinseq-lite.pl
-$;JAVA_EXEC$;=/usr/bin/java
+$;JAVA_EXEC$;=/usr/lib/jvm/java-8-openjdk-amd64/bin/java
 
 [component blastn_plus]
 $;BLASTPLUS_BIN$;=/usr/bin
