--- a/package-lgtseek/docs/gather_lgtseek_files.config
+++ b/package-lgtseek/docs/gather_lgtseek_files.config
@@ -9,6 +9,7 @@ $;RUN_ID$;=
 $;LGT_BAM_OUT$;=
 $;RECIPIENT_BAM_OUT$;=
 $;DONOR_BAM_OUT$;=
+$;BLAST_LGT_BAM_OUT$;=
 ;; Path to various mpileup output files
 $;LGT_RECIPIENT_MPILEUP$;=$;REPOSITORY_ROOT$;/output_repository/lgt_mpileup/$;PIPELINEID$;_lgt_recipient/lgt_mpileup.list
 $;LGT_DONOR_MPILEUP$;=$;REPOSITORY_ROOT$;/output_repository/lgt_mpileup/$;PIPELINEID$;_lgt_donor/lgt_mpileup.list
@@ -34,7 +35,7 @@ $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/
 $;OUTPUT_LIST$; =
 
 [component]
-$;COMPONENT_NAME$; = gather_lgtview_files
+$;COMPONENT_NAME$; = gather_lgtseek_files
 $;DESCRIPTION$; = none
 $;SKIP_WF_COMMAND$; = 
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
