--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.donor_only.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.donor_only.config
@@ -3,6 +3,10 @@ $;INPUT_FILE$; = $;DONOR_REFERENCE$;
 $;INPUT_FILE_LIST$; = $;DONOR_LIST$;
 $;QUERY_FILE$; = $;REPOSITORY_ROOT$;/output_repository/sra2fastq/$;PIPELINEID$;_default/sra2fastq.list
 
+[lgt_bwa validation]
+$;INPUT_FILE$; = $;DONOR_REFERENCE$;
+$;INPUT_FILE_LIST$; = $;DONOR_LIST$;
+
 [global]
 ;; Donor fasta reference
 $;DONOR_REFERENCE$; =
