--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_Post_Analysis/gather_lgtseek_files.default.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_Post_Analysis/gather_lgtseek_files.default.config
@@ -9,6 +9,7 @@ $;RUN_ID$;=
 $;LGT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt/filter_dups_lc_seqs.bam.list
 $;RECIPIENT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_recipient/filter_dups_lc_seqs.bam.list
 $;DONOR_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_donor/filter_dups_lc_seqs.bam.list
+$;BLAST_LGT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/lgt_bwa/$;PIPELINEID$;_validation/lgt_bwa.bam.list
 ;; Path to various mpileup output files
 $;LGT_RECIPIENT_MPILEUP$;=$;REPOSITORY_ROOT$;/output_repository/lgt_mpileup/$;PIPELINEID$;_lgt_recipient/lgt_mpileup.list
 $;LGT_DONOR_MPILEUP$;=$;REPOSITORY_ROOT$;/output_repository/lgt_mpileup/$;PIPELINEID$;_lgt_donor/lgt_mpileup.list
@@ -35,7 +36,7 @@ $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/
 $;OUTPUT_LIST$; =
 
 [component]
-$;COMPONENT_NAME$; = gather_lgtview_files
+$;COMPONENT_NAME$; = gather_lgtseek_files
 $;DESCRIPTION$; = none
 $;SKIP_WF_COMMAND$;=
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
