lots of changes pertaining to lgt_bwa_post_process

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_bwa_post_process.default.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_bwa_post_process.default.config
@@ -20,12 +20,9 @@ $;INPUT_EXTENSION$; =
 [output]
 $;OUTPUT_TOKEN$; = default
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-$;MB_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.donor.bam.list
-$;RECIPIENT_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.recipient.bam.list
-$;LGT_H_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.lgt_host.bam.list
-$;SINGLE_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.single_map.bam.list
-$;NO_MAP_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.no_map.bam.list
-$;SINGLE_PAIRED_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.single_paired_map.bam.list
+$;LGT_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.lgt_recipient.bam.list
+$;ALL_DONOR_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.all_donor.bam.list
+$;ALL_RECIPIENT_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.all_recipient.bam.list
 
 [component]
 $;COMPONENT_NAME$; = lgt_bwa_post_process
