--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_bwa_post_process.default.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_bwa_post_process.default.config
@@ -20,9 +20,12 @@ $;INPUT_EXTENSION$; =
 [output]
 $;OUTPUT_TOKEN$; = default
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-$;LGT_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.lgt_recipient.bam.list
-$;ALL_DONOR_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.all_donor.bam.list
-$;ALL_RECIPIENT_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.all_recipient.bam.list
+$;LGT_TOKEN$;=lgt_recipient
+$;ALL_DONOR_TOKEN$;=all_donor
+$;ALL_RECIPIENT_TOKEN$;=all_recipient
+$;LGT_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;LGT_TOKEN$;.bam.list
+$;ALL_DONOR_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;ALL_DONOR_TOKEN$;.bam.list
+$;ALL_RECIPIENT_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;ALL_RECIPIENT_TOKEN$;.bam.list
 
 [component]
 $;COMPONENT_NAME$; = lgt_bwa_post_process
