--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_bwa_post_process.default.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_bwa_post_process.default.config
@@ -26,6 +26,7 @@ $;ALL_RECIPIENT_TOKEN$;=all_recipient
 $;LGT_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;LGT_TOKEN$;.bam.list
 $;ALL_DONOR_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;ALL_DONOR_TOKEN$;.bam.list
 $;ALL_RECIPIENT_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;ALL_RECIPIENT_TOKEN$;.bam.list
+$;LGT_INFECTED_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.lgt_infected_recipient.bam.list 
 
 [component]
 $;COMPONENT_NAME$; = lgt_bwa_post_process
