initial commit of some NICU scripts

--- a/package-nicu/software.config
+++ b/package-nicu/software.config
@@ -6,10 +6,7 @@
 ; component.  Tokens under any 'common' section will be evaluated for all
 ; components ;; common stuff first
 [common shared]
-$;PARAM$;=value
+$;PICARD_TOOLS$;=/usr/local/packages/picard-tools-2.7.1/picard.jar
+$;JAVA_EXEC$;=/usr/local/packages/java-jre-1.8.0/bin/java
+$;GATK_BIN$;= /usr/local/packages/gatk-3.7/
 
-[common inputs]
-$;PARAM$;=value
-
-[component ###component_name###]
-$;PARAM$;=value
