committing scripts to use in lgt-infected recipient use case

--- a/package-lgtseek/docs/concatenate_files.config
+++ b/package-lgtseek/docs/concatenate_files.config
@@ -2,8 +2,10 @@
 classification = utility
 
 [input]
-;all files in input list will be concatenated into output file
+; All files in input list will be concatenated into output file. Can comma-separate lists to concatenate all elements
 $;INPUT_FILE_LIST$; = 
+; Comma-separated string of input files
+$;INPUT_FILES$; = 
 
 [output]
 $;OUTPUT_TOKEN$; = default
