--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/concatenate_files.lgt_infected.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/concatenate_files.lgt_infected.config
@@ -2,15 +2,15 @@
 classification=utility
 
 [input]
-; All files in input list will be concatenated into output file. Can comma-separate lists to concatenate all elements
-$;INPUT_FILE_LIST$;=$;REPOSITORY_ROOT$;/output_repository/blastn_plus/$;PIPELINEID$;_nt/blastn_plus.m8.list
+; All files in input list will be concatenated into output file. Can comma-separate lists to concatenate all elements.  
+$;INPUT_FILE_LIST$;=
 ; Comma-separated string of input files
-$;INPUT_FILES$; = 
+$;INPUT_FILES$; = $;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt/filter_dups_lc_seqs.bam.list,$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_infected/filter_dups_lc_seqs.bam.list
 
 [output]
-$;OUTPUT_TOKEN$;=blast
+$;OUTPUT_TOKEN$;=lgt_infected
 $;OUTPUT_DIRECTORY$;=$;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-$;OUTPUT_FILE$;=$;OUTPUT_DIRECTORY$;/blastn.out
+$;OUTPUT_FILE$;=$;OUTPUT_DIRECTORY$;/lgt_infected.list
 
 [component]
 $;COMPONENT_NAME$;=concatenate_files
