--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/samtools_merge.lgt_infected.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/samtools_merge.lgt_infected.config
@@ -2,33 +2,23 @@
 classification = LGT
 
 [parameters]
-;; Abbreviation used to name post-processing tab file
-$;PREFIX$;=lgt
-;; If flag is present, will remove dupliations of sequences
-$;RM_DUPLICATES$;=1
-;; If flag is present, will remove sequences deemed to have low complexity
-$;RM_LOW_COMPLEXITY$;=1
-;; Method used to filter out low complexity seq.  Default is 'dust'
-$;LC_METHOD$;=dust
-;; Threshold for filtering low complexity seqs. Default is 7
-$;LC_THRESHOLD$;=7
 
 [input]
-;; BAM file
+;; List containing BAM files
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/concatenate_files/$;PIPELINEID$;_$;OUTPUT_TOKEN$;/lgt_infected.list
 $;INPUT_FILE$; =
-$;INPUT_FILE_LIST$;=$;REPOSITORY_ROOT$;/output_repository/lgt_bwa_post_process/$;PIPELINEID$;_default/lgt_bwa_post_process.lgt_infected_recipient.bam.list
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
-$;INPUT_EXTENSION$; =
+$;INPUT_EXTENSION$; = raw
 
 [output]
-$;OUTPUT_TOKEN$; = paired
+$;OUTPUT_TOKEN$; = lgt_infected
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-$;BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.bam.list
+$;OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.bam.list
 
 [component]
-$;COMPONENT_NAME$; = filter_dups_lc_seqs
-$;DESCRIPTION$; = Lateral Genome Transfer - filter duplicate and low_complexity seqs
+$;COMPONENT_NAME$; = samtools_merge
+$;DESCRIPTION$; = Merge a list of BAM files
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
 
@@ -53,6 +43,3 @@ $;PIPELINEID$; =
 
 [include]
 $;PROJECT_CONFIG$;=
-
-[dce]
-$;MEMORY$;=5120
