committing new pipeline use-case code

--- a/package-lgtseek/docs/gather_lgtseek_files.config
+++ b/package-lgtseek/docs/gather_lgtseek_files.config
@@ -11,10 +11,10 @@ $;RECIPIENT_BAM_OUT$;=
 $;DONOR_BAM_OUT$;=
 $;BLAST_LGT_BAM_OUT$;=
 ;; Path to various mpileup output files
-$;LGT_RECIPIENT_MPILEUP$;=$;REPOSITORY_ROOT$;/output_repository/lgt_mpileup/$;PIPELINEID$;_lgt_recipient/lgt_mpileup.list
-$;LGT_DONOR_MPILEUP$;=$;REPOSITORY_ROOT$;/output_repository/lgt_mpileup/$;PIPELINEID$;_lgt_donor/lgt_mpileup.list
-$;ALL_RECIPIENT_MPILEUP$;=$;REPOSITORY_ROOT$;/output_repository/lgt_mpileup/$;PIPELINEID$;_all_recipient/lgt_mpileup.list
-$;ALL_DONOR_MPILEUP$;=$;REPOSITORY_ROOT$;/output_repository/lgt_mpileup/$;PIPELINEID$;_all_donor/lgt_mpileup.list
+$;LGT_RECIPIENT_MPILEUP$;=
+$;LGT_DONOR_MPILEUP$;=
+$;ALL_RECIPIENT_MPILEUP$;=
+$;ALL_DONOR_MPILEUP$;=
 ;; Path to LGT by-clone.txt file, containing various information for both donor and host
 $;LGT_CLONE_OUT$;=
 ;; Path to concatenated m8 BlastN results
