--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/concatenate_files.lgt_infected.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/concatenate_files.lgt_infected.config
@@ -10,7 +10,7 @@ $;INPUT_FILES$; = $;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PI
 [output]
 $;OUTPUT_TOKEN$;=lgt_infected
 $;OUTPUT_DIRECTORY$;=$;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-$;OUTPUT_FILE$;=$;OUTPUT_DIRECTORY$;/lgt_infected.list
+$;OUTPUT_FILE$;=$;OUTPUT_DIRECTORY$;/lgt_infected.bam.list
 
 [component]
 $;COMPONENT_NAME$;=concatenate_files
