--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/samtools_merge.lgt_infected.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/samtools_merge.lgt_infected.config
@@ -5,7 +5,7 @@ classification = LGT
 
 [input]
 ;; List containing BAM files
-$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/concatenate_files/$;PIPELINEID$;_$;OUTPUT_TOKEN$;/lgt_infected.list
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/concatenate_files/$;PIPELINEID$;_$;OUTPUT_TOKEN$;/lgt_infected.bam.list
 $;INPUT_FILE$; =
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
