--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blastn_plus.nt.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blastn_plus.nt.config
@@ -9,7 +9,7 @@ $;FILTER$; = no
 ;-max_target_seqs Maximum number of aligned sequences to keep default=150
 $;MAX_TARGET_SEQS$; = 150
 ;; Example options to put here:  -gilist/-negative_gilist, -task
-$;OTHER_OPTS$; = "-task blastn "
+$;OTHER_OPTS$; = "-task blastn -dust no"
 $;COMPRESS_RAW_OUTPUT$; = 0
 $;COMPRESS_BSML_OUTPUT$; = 0
 ;; Filter the HSPs for use in the %identity/similarity/coverage for each seq-pair-alignment in the output bsml. Setting this to 0 could show very low scores on the seq-pair-alignment despite having a very high scoring HSP.
