more script additions and changes

--- a/package-nicu/software.config
+++ b/package-nicu/software.config
@@ -9,4 +9,4 @@
 $;PICARD_TOOLS$;=/usr/local/packages/picard-tools-2.7.1/picard.jar
 $;JAVA_EXEC$;=/usr/local/packages/java-jre-1.8.0/bin/java
 $;GATK_BIN$;= /usr/local/packages/gatk-3.7/
-
+$;SAMTOOLS_BIN$;=/opt/samtools/bin/
