--- a/package-nicu/docs/base_recalibration.config
+++ b/package-nicu/docs/base_recalibration.config
@@ -19,7 +19,7 @@ $;INPUT_EXTENSION$; = config
 
 [output]
 ;; use a unique sample name
-$;OUTPUT_TOKEN$; = base_recal
+$;OUTPUT_TOKEN$; = default
 ;; output directory for component results
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 ;; list of base_recalibration config files
