--- a/package-lgtseek/software.config
+++ b/package-lgtseek/software.config
@@ -9,11 +9,12 @@
 $;BWA_EXEC$;=/opt/packages/bwa/bwa
 $;SAMTOOLS_BIN$;=/opt/packages/samtools/bin
 $;SAMTOOLS_EXEC$;=/opt/packages/samtools/bin/samtools
-$;NCBI_TAX_BIN$;=/local/db//taxdump/
+$;NCBI_TAX_BIN$;=$;DB_DIR$;/taxdump/
 $;PICARD_TOOLS$;=/opt/packages/picard/build/libs/picard.jar
 $;BLASTPLUS_BIN$;=/usr/bin
 
 [common inputs]
+$;DB_DIR$;=/local/db/
 $;NCBI_BLAST_NT$; = nt
 
 [component filter_dups_lc_seqs]
