changed memory config from using MEMORY to PASSTHROUGH

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_bwa.recipient.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_bwa.recipient.config
@@ -77,6 +77,5 @@ $;PIPELINEID$; =
 $;PROJECT_CONFIG$;=
 
 [dce]
-$;MEMORY$;=10240
 $;QUEUE$;=threaded.q
-$;PASSTHROUGH$;= -pe thread 16
+$;PASSTHROUGH$;= -l mem_free=10G -pe thread 16
