fixes relating to testing annovar component

--- a/package-arbor/docs/annovar.config
+++ b/package-arbor/docs/annovar.config
@@ -20,7 +20,7 @@ $;OUTPUT_TOKEN$; = default
 ;; output directory for component results
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 ;; list of print_reads config files
-$;OUTPUT_CONFIG$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.configs.list
+$;VCF_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.vcf.list
 
 [component]
 $;COMPONENT_NAME$; = annovar
