changed what goes into the annovar output list

--- a/package-arbor/docs/annovar.config
+++ b/package-arbor/docs/annovar.config
@@ -19,8 +19,7 @@ $;INPUT_EXTENSION$; = config
 $;OUTPUT_TOKEN$; = default
 ;; output directory for component results
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-;; list of print_reads config files
-$;VCF_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.vcf.list
+$;MULTIANNO_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.multianno.list
 
 [component]
 $;COMPONENT_NAME$; = annovar
