various changes now that the lgt_donor BAM file is being used downstream

--- a/package-lgtseek/docs/lgt_bwa_post_process.config
+++ b/package-lgtseek/docs/lgt_bwa_post_process.config
@@ -20,10 +20,12 @@ $;INPUT_EXTENSION$; =
 [output]
 $;OUTPUT_TOKEN$; = default
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-$;LGT_TOKEN$;=lgt_recipient
+$;LGT_DONOR_TOKEN$;=lgt_donor
+$;LGT_RECIPIENT_TOKEN$;=lgt_recipient
 $;ALL_DONOR_TOKEN$;=all_donor
 $;ALL_RECIPIENT_TOKEN$;=all_recipient
-$;LGT_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;LGT_TOKEN$;.bam.list
+$;LGT_DONOR_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;LGT_DONOR_TOKEN$;.bam.list
+$;LGT_RECIPIENT_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;LGT_RECIPIENT_TOKEN$;.bam.list
 $;ALL_DONOR_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;ALL_DONOR_TOKEN$;.bam.list
 $;ALL_RECIPIENT_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;ALL_RECIPIENT_TOKEN$;.bam.list
 $;LGT_INFECTED_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.lgt_infected_recipient.bam.list 
