--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/filter_dups_lc_seqs.all_recipient.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/filter_dups_lc_seqs.all_recipient.config
@@ -2,32 +2,40 @@
 classification = LGT
 
 [parameters]
-;; Fasta reference file.  If using in LGT pipeline, this would be a reference to the host sequence.  A list file is also optional
-$;FASTA_REFERENCE$; =
+;; Abbreviation used to name post-processing tab file
+$;PREFIX$;=recipient
+;; If flag is present, will remove dupliations of sequences
+$;RM_DUPLICATES$;=1
+;; If flag is present, will remove sequences deemed to have low complexity
+$;RM_LOW_COMPLEXITY$;=1
+;; Method used to filter out low complexity seq.  Default is 'dust'
+$;LC_METHOD$;=dust
+;; Threshold for filtering low complexity seqs. Default is 7
+$;LC_THRESHOLD$;=7
 
 [input]
-$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt_recipient/filter_dups_lc_seqs.bam.list
-;; A BAM file that has been filtered of duplicated and low-complexity reads
+;; BAM file
 $;INPUT_FILE$; =
+$;INPUT_FILE_LIST$;=$;REPOSITORY_ROOT$;/output_repository/lgt_bwa_post_process/$;PIPELINEID$;_default/lgt_bwa_post_process.all_recipient.bam.list
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
-$;INPUT_EXTENSION$; = fsa
+$;INPUT_EXTENSION$; =
 
 [output]
-$;OUTPUT_TOKEN$; = lgt_recipient
+$;OUTPUT_TOKEN$; = all_recipient
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-$;MPILEUP_OUTPUT_LIST$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;/lgt_mpileup.list
+$;BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.bam.list
 
 [component]
-$;COMPONENT_NAME$; = lgt_mpileup
-$;DESCRIPTION$; = none
+$;COMPONENT_NAME$; = filter_dups_lc_seqs
+$;DESCRIPTION$; = Lateral Genome Transfer - filter duplicate and low_complexity seqs
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
 
 ;The version,revision,tag here is set by an interpolated CVS tag
-$;VERSION$; = $Name$
+$;VERSION$; = 2.0
 $;RELEASE_TAG$; = $Name$
-$;REVISION$;            = $Revision$
+$;REVISION$;            = $Revision: 5801 $
 
 $;TEMPLATE_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.xml
 $;ITERATOR1$; = i1
@@ -47,4 +55,4 @@ $;PIPELINEID$; =
 $;PROJECT_CONFIG$;=
 
 [dce]
-$;PASSTHROUGH$;= -l mem_free=5G
+$;PASSTHROUGH$;= -l mem_free=7G
