--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/filter_dups_lc_seqs.lgt_recipient.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/filter_dups_lc_seqs.lgt_recipient.config
@@ -3,7 +3,7 @@ classification = LGT
 
 [parameters]
 ;; Abbreviation used to name post-processing tab file
-$;PREFIX$;=donor
+$;PREFIX$;=lgt
 ;; If flag is present, will remove dupliations of sequences
 $;RM_DUPLICATES$;=1
 ;; If flag is present, will remove sequences deemed to have low complexity
@@ -16,13 +16,13 @@ $;LC_THRESHOLD$;=7
 [input]
 ;; BAM file
 $;INPUT_FILE$; =
-$;INPUT_FILE_LIST$; =$;REPOSITORY_ROOT$;/output_repository/lgt_bwa_post_process/$;PIPELINEID$;_default/lgt_bwa_post_process.all_donor.bam.list
+$;INPUT_FILE_LIST$;=$;REPOSITORY_ROOT$;/output_repository/lgt_bwa_post_process/$;PIPELINEID$;_default/lgt_bwa_post_process.lgt_recipient.bam.list
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
 $;INPUT_EXTENSION$; =
 
 [output]
-$;OUTPUT_TOKEN$; = donor
+$;OUTPUT_TOKEN$; = lgt_recipient
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.bam.list
 
