various changes.  See CHANGELOG for June 20

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgtseek_classify_reads.default.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgtseek_classify_reads.default.config
@@ -31,8 +31,8 @@ $;ALL_RECIPIENT_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;AL
 $;LGT_INFECTED_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.lgt_infected_recipient.bam.list 
 
 [component]
-$;COMPONENT_NAME$; = lgt_bwa_post_process
-$;DESCRIPTION$; = Post processing of aligned and filtered reads to detect LGT
+$;COMPONENT_NAME$; = lgtseek_classify_reads
+$;DESCRIPTION$; = Classification of aligned reads to detect LGT
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
 $;SKIP_WF_COMMAND$;= create single-map BAM file list,create no-map BAM file list,create single/paired-map BAM file list
