--- a/package-lgtseek/software.config
+++ b/package-lgtseek/software.config
@@ -21,5 +21,8 @@ $;NCBI_BLAST_NT$; = nt
 $;PRINSEQ_EXEC$;=/opt/packages/prinseq/prinseq-lite.pl
 $;JAVA_EXEC$;=/usr/lib/jvm/java-8-openjdk-amd64/bin/java
 
+[component formatdb]
+$;MAKEBLASTDB_EXEC$; = $;BLASTPLUS_BIN$;/makeblastdb
+
 [component sra2fastq]
 $;SRA_TOOLS_BIN$;=/opt/packages/sra-tools/
