--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.lgt_infected.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.lgt_infected.config
@@ -6,6 +6,10 @@ $;INPUT_FILE_LIST$; = $;DONOR_LIST$;
 $;INPUT_FILE$; = $;HOST_REFERENCE$;
 $;INPUT_FILE_LIST$; = $;HOST_LIST$;
 
+[formatdb references]
+$;INPUT_FILE$; = "$;DONOR_REFERENCE$; $;HOST_REFERENCE"
+$;INPUT_FILE_LIST$; = "$;DONOR_LIST$; $;HOST_LIST$;"
+
 [global]
 ;; Host/recipient fasta reference
 $;HOST_REFERENCE$; =
