--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_bwa.validation_d.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_bwa.validation_d.config
@@ -3,7 +3,7 @@ classification = LGT
 
 [parameters]
 ;; Path to the query file or list to be aligned
-$;QUERY_FILE$; = $;REPOSITORY_ROOT$;/output_repository/lgt_create_validated_bam/$;PIPELINEID$;_lgt/lgt_create_validated_bam.bam.list
+$;QUERY_FILE$; = $;REPOSITORY_ROOT$;/output_repository/lgt_create_validated_bam/$;PIPELINEID$;_lgt_d/lgt_create_validated_bam.bam.list
 ;; Input 1 to use bwa-mem instead of bwa-aln
 $;USE_MEM$; = 0
 ;;Mismatch Penalty.
@@ -36,14 +36,14 @@ $;SAM_SORT_ARGS$; =
 
 [input]
 ;; Input is a reference fasta that has been indexed by BWA.  Fasta reference must be in the same directory as the indexing files.  INPUT_FILE_LIST accepts a list of reference fasta files
-$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/lgt_build_bwa_index/$;PIPELINEID$;_recipient/lgt_build_bwa_index.fsa.list 
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/lgt_build_bwa_index/$;PIPELINEID$;_donor/lgt_build_bwa_index.fsa.list 
 $;INPUT_FILE$; =
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
 $;INPUT_EXTENSION$; =
 
 [output]
-$;OUTPUT_TOKEN$; = validation
+$;OUTPUT_TOKEN$; = validation_d
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;SAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.sam.list
 $;BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.bam.list
