--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_create_validated_bam.lgt_r.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_create_validated_bam.lgt_r.config
@@ -3,18 +3,18 @@ classification = LGT
 
 [parameters]
 ;; List file that contains one trace and one clone hits file each, containing LGT hits and LCA info
-$;LGT_HITS$;= $;REPOSITORY_ROOT$;/output_repository/blast_lgt_finder/$;PIPELINEID$;_lgt/lgt_finder.list
+$;LGT_HITS$;= $;REPOSITORY_ROOT$;/output_repository/blast_lgt_finder/$;PIPELINEID$;_lgt_r/lgt_finder.list
 
 [input]
 ;; A filtered BAM file
-$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt/filter_dups_lc_seqs.bam.list
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt_recipient/filter_dups_lc_seqs.bam.list
 $;INPUT_FILE$; =
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
 $;INPUT_EXTENSION$; = raw
 
 [output]
-$;OUTPUT_TOKEN$; = lgt
+$;OUTPUT_TOKEN$; = lgt_r
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;BAM_LIST$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;/$;COMPONENT_NAME$;.bam.list
 
