--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blastn_plus.references_r.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blastn_plus.references_r.config
@@ -19,7 +19,7 @@ $;SPLIT_BSML$;=0
 $;SPLIT_BTAB$;=0
 
 [input]
-$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/split_multifasta/$;PIPELINEID$;_fasta/split_multifasta.fsa.list
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/split_multifasta/$;PIPELINEID$;_fasta_r/split_multifasta.fsa.list
 $;INPUT_FILE$; = 
 $;INPUT_DIRECTORY$; = 
 ;; the following is only used when iterating over an INPUT_DIRECTORY
@@ -30,7 +30,7 @@ $;REMOTE$;=0
 $;DATABASE_PATH$; = $;REPOSITORY_ROOT$;/output_repository/formatdb/$;PIPELINEID$;_$;OUTPUT_TOKEN$;/db
 
 [output]
-$;OUTPUT_TOKEN$; = references
+$;OUTPUT_TOKEN$; = references_r
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;BSML_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.bsml.list
 $;BTAB_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.btab.list
