--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.recipient_only.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.recipient_only.config
@@ -7,7 +7,7 @@ $;KEEP_MM$; = 0
 $;INPUT_FILE$; = $;REFSEQ_REFERENCE$;
 $;INPUT_FILE_LIST$; = $;REFSEQ_LIST$;
 
-[lgt_bwa validation]
+[lgt_bwa validation_r]
 $;INPUT_FILE$; = $;HOST_REFERENCE$;
 $;INPUT_FILE_LIST$; = $;HOST_LIST$;
 
