--- a/package-lgtseek/docs/gather_lgtseek_files.config
+++ b/package-lgtseek/docs/gather_lgtseek_files.config
@@ -4,23 +4,27 @@ classification = utility
 [parameters]
 ;; Run ID obtained from the Sequence Read Archive
 $;RUN_ID$;=
+;; Comma-separated-value file of metadata for a particular SRA read
+$;METADATA_FILE$;=
 
 ;; Path to various classified BAM output files
 $;LGT_BAM_OUT$;=
 $;RECIPIENT_BAM_OUT$;=
 $;DONOR_BAM_OUT$;=
-$;BLAST_LGT_BAM_OUT$;=
+;; BAM files created by validating BlastN results
+$;DONOR_LGT_BLAST_BAM_OUT$;=
+$;RECIPIENT_LGT_BLAST_BAM_OUT$;=
 ;; Path to various mpileup output files
 $;LGT_RECIPIENT_MPILEUP$;=
 $;LGT_DONOR_MPILEUP$;=
 $;ALL_RECIPIENT_MPILEUP$;=
 $;ALL_DONOR_MPILEUP$;=
 ;; Path to LGT by-clone.txt file, containing various information for both donor and host
-$;LGT_CLONE_OUT$;=
+$;DONOR_LGT_CLONE_OUT$;=
+$;RECIPIENT_LGT_CLONE_OUT$;=
 ;; Path to concatenated m8 BlastN results
-$;BLAST_M8_OUT$;=
-;; Comma-separated-value file of metadata for a particular SRA read
-$;METADATA_FILE$;=
+$;DONOR_BLAST_M8_OUT$;=
+$;RECIPIENT_BLAST_M8_OUT$;=
 
 [input]
 $;INPUT_FILE_LIST$; =
