adding post processing counts to output

--- a/package-lgtseek/docs/gather_lgtseek_files.config
+++ b/package-lgtseek/docs/gather_lgtseek_files.config
@@ -25,6 +25,8 @@ $;RECIPIENT_LGT_CLONE_OUT$;=
 ;; Path to concatenated m8 BlastN results
 $;DONOR_BLAST_M8_OUT$;=
 $;RECIPIENT_BLAST_M8_OUT$;=
+;; Classification counts file
+$;CLASSIFICATION_COUNTS_FILE$;=
 
 [input]
 $;INPUT_FILE_LIST$; =
