--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_Post_Analysis/gather_lgtseek_files.default.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_Post_Analysis/gather_lgtseek_files.default.config
@@ -4,12 +4,15 @@ classification = utility
 [parameters]
 ;; Run ID obtained from the Sequence Read Archive
 $;RUN_ID$;=
+;; Comma-separated-value file of metadata for a particular SRA read
+$;METADATA_FILE$;=$;REPOSITORY_ROOT$;/output_repository/download_sra/$;PIPELINEID$;_default/$;RUN_ID$;_info.csv
 
 ;; Path to various classified BAM output files
 $;LGT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt/filter_dups_lc_seqs.bam.list
 $;RECIPIENT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_recipient/filter_dups_lc_seqs.bam.list
 $;DONOR_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_donor/filter_dups_lc_seqs.bam.list
-$;BLAST_LGT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/lgt_bwa/$;PIPELINEID$;_validation/lgt_bwa.bam.list
+$;DONOR_LGT_BLAST_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/lgt_bwa/$;PIPELINEID$;_validation_d/lgt_bwa.bam.list
+$;RECIPIENT_LGT_BLAST_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/lgt_bwa/$;PIPELINEID$;_validation_r/lgt_bwa.bam.list
 ;; Path to various mpileup output files
 $;LGT_RECIPIENT_MPILEUP$;=$;REPOSITORY_ROOT$;/output_repository/lgt_mpileup/$;PIPELINEID$;_lgt_recipient/lgt_mpileup.list
 $;LGT_DONOR_MPILEUP$;=$;REPOSITORY_ROOT$;/output_repository/lgt_mpileup/$;PIPELINEID$;_lgt_donor/lgt_mpileup.list
@@ -17,11 +20,14 @@ $;ALL_RECIPIENT_MPILEUP$;=$;REPOSITORY_ROOT$;/output_repository/lgt_mpileup/$;PI
 $;ALL_DONOR_MPILEUP$;=$;REPOSITORY_ROOT$;/output_repository/lgt_mpileup/$;PIPELINEID$;_all_donor/lgt_mpileup.list
 
 ;; Path to LGT by-clone.txt file, containing various information for both donor and host
-$;LGT_CLONE_OUT$;=$;REPOSITORY_ROOT$;/output_repository/blast_lgt_finder/$;PIPELINEID$;_lgt/i1/g1/blastn_by_clone.txt
+$;DONOR_LGT_CLONE_OUT$;=$;REPOSITORY_ROOT$;/output_repository/blast_lgt_finder/$;PIPELINEID$;_lgt_d/i1/g1/blastn_by_clone.txt
+$;RECIPIENT_LGT_CLONE_OUT$;=$;REPOSITORY_ROOT$;/output_repository/blast_lgt_finder/$;PIPELINEID$;_lgt_r/i1/g1/blastn_by_clone.txt
 ;; Path to concatenated m8 BlastN results
-$;BLAST_M8_OUT$;=$;REPOSITORY_ROOT$;/output_repository/concatenate_files/$;PIPELINEID$;_blast//blastn.out
-;; Comma-separated-value file of metadata for a particular SRA read
-$;METADATA_FILE$;=$;REPOSITORY_ROOT$;/output_repository/download_sra/$;PIPELINEID$;_default/$;RUN_ID$;_info.csv
+$;DONOR_BLAST_M8_OUT$;=$;REPOSITORY_ROOT$;/output_repository/concatenate_files/$;PIPELINEID$;_blast_d/blastn.out
+$;RECIPIENT_BLAST_M8_OUT$;=$;REPOSITORY_ROOT$;/output_repository/concatenate_files/$;PIPELINEID$;_blast_r/blastn.out
+
+;; Classification counts file
+$;CLASSIFICATION_COUNTS_FILE$;=$;REPOSITORY_ROOT$;/output_repository/lgtseek_classify_reads/$;PIPELINEID$;_default/classification.counts
 
 [input]
 $;INPUT_FILE_LIST$; =
