fixed pipeline parameter conversion bug

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_Post_Analysis/gather_lgtseek_files.default.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_Post_Analysis/gather_lgtseek_files.default.config
@@ -8,9 +8,10 @@ $;RUN_ID$;=
 $;METADATA_FILE$;=$;REPOSITORY_ROOT$;/output_repository/download_sra/$;PIPELINEID$;_default/$;RUN_ID$;_info.csv
 
 ;; Path to various classified BAM output files
-$;LGT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt/filter_dups_lc_seqs.bam.list
-$;RECIPIENT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_recipient/filter_dups_lc_seqs.bam.list
-$;DONOR_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_donor/filter_dups_lc_seqs.bam.list
+$;LGT_DONOR_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt_donor/filter_dups_lc_seqs.bam.list
+$;LGT_RECIPIENT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt_recipient/filter_dups_lc_seqs.bam.list
+$;ALL_DONOR_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_all_donor/filter_dups_lc_seqs.bam.list
+$;ALL_RECIPIENT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_all_recipient/filter_dups_lc_seqs.bam.list
 $;DONOR_LGT_BLAST_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/lgt_bwa/$;PIPELINEID$;_validation_d/lgt_bwa.bam.list
 $;RECIPIENT_LGT_BLAST_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/lgt_bwa/$;PIPELINEID$;_validation_r/lgt_bwa.bam.list
 ;; Path to various mpileup output files
