fixing formatdb params

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/formatdb.references.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/formatdb.references.config
@@ -7,7 +7,7 @@ $;PROTEIN$;=F
 
 [input]
 ;; space-separated list
-$;INPUT_FILES$;=$;REPOSITORY_ROOT$;/output_repository/bsml2fasta/$;PIPELINEID$;_pre_overlap_analysis/sequence.fsa
+$;INPUT_FILES$;=
 $;INPUT_FILE_LIST$;=
 
 [output]
