--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.lgt_infected.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.lgt_infected.config
@@ -7,7 +7,7 @@ $;INPUT_FILE$; = $;HOST_REFERENCE$;
 $;INPUT_FILE_LIST$; = $;HOST_LIST$;
 
 [formatdb references]
-$;INPUT_FILE$; = "$;DONOR_REFERENCE$; $;HOST_REFERENCE"
+$;INPUT_FILES$; = "$;DONOR_REFERENCE$; $;HOST_REFERENCE"
 $;INPUT_FILE_LIST$; = "$;DONOR_LIST$; $;HOST_LIST$;"
 
 [global]
