changing mpileup place in pipeline

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_mpileup.lgt_recipient.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_mpileup.lgt_recipient.config
@@ -6,7 +6,7 @@ classification = LGT
 $;FASTA_REFERENCE$; =
 
 [input]
-$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt_recipient/filter_dups_lc_seqs.bam.list
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/lgt_bwa/$;PIPELINEID$;_validation_r/lgt_bwa.bam.list
 ;; A BAM file that has been filtered of duplicated and low-complexity reads
 $;INPUT_FILE$; =
 $;INPUT_DIRECTORY$; =
