lots of changes

--- a/package-lgtseek/docs/blastdb_alias.config
+++ b/package-lgtseek/docs/blastdb_alias.config
@@ -2,13 +2,14 @@
 classification = file / indexing
 
 [parameters]
-;; enter T for protein, F for nucleotide
-$;PROTEIN$; = T
+;; Put 'nucl' for nucleotide database, put 'prot' for protein database
+$;DB_TYPE$; = nucl
 
 [input]
-;; space-separated list
-$;INPUT_FILES$; = 
-$;INPUT_FILE_LIST$; =
+;; Path to newline-separated list of accession IDs
+$;INPUT_FILE$; = 
+;; Path and prefix of database to create subset out of
+$;DATABASE_PATH$; =
 
 [output]
 $;OUTPUT_TOKEN$; = default
@@ -17,8 +18,8 @@ $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/
 $;DATABASE_NAME$; = db
 
 [component]
-$;COMPONENT_NAME$; = formatdb
-$;DESCRIPTION$; = none
+$;COMPONENT_NAME$; = blastdb_alias
+$;DESCRIPTION$; = Create an aliased subset of a passed in BLAST database
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
 
