--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blastn_plus.nt_r.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blastn_plus.nt_r.config
@@ -27,7 +27,7 @@ $;INPUT_EXTENSION$; = fasta
 ;-remote Set to 1 if you wish to query a remote database from NCBI servers
 $;REMOTE$;=0
 ;; If $;REMOTE$; = 1, just add the database name
-$;DATABASE_PATH$; = $;NCBI_BLAST_NT$;
+$;DATABASE_PATH$; = $;REPOSITORY_ROOT$;/output_repository/blastdb_alias/$;PIPELINEID$;_bac/db_bac
 
 [output]
 $;OUTPUT_TOKEN$; = nt_r
