--- a/package-lgtseek/software.config
+++ b/package-lgtseek/software.config
@@ -17,12 +17,13 @@ $;BLASTPLUS_BIN$;=/usr/bin
 $;DB_DIR$;=/local/db/
 $;NCBI_BLAST_NT$; = nt
 
+$;METAZOA_ACC_LIST$; = $;DB_DIR$;/metazoa.accession.txt
+$;BACTERIA_ACC_LIST$; = $;DB_DIR$;/bacteria.accession.txt
+
+
 [component filter_dups_lc_seqs]
 $;PRINSEQ_EXEC$;=/opt/packages/prinseq/prinseq-lite.pl
 $;JAVA_EXEC$;=/usr/lib/jvm/java-8-openjdk-amd64/bin/java
-
-[component formatdb]
-$;MAKEBLASTDB_EXEC$; = $;BLASTPLUS_BIN$;/makeblastdb
 
 [component sra2fastq]
 $;SRA_TOOLS_BIN$;=/opt/packages/sra-tools/
