renamed lgt_bwa to bwa_aln and other changes

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/bwa_aln.recipient.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/bwa_aln.recipient.config
@@ -3,8 +3,8 @@ classification = LGT
 
 [parameters]
 ;; Path to the query file or list to be aligned
-$;QUERY_FILE$; = $;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_all_donor/filter_dups_lc_seqs.bam.list
-;;Input 1 to use bwa-mem instead of bwa-aln
+$;QUERY_FILE$; = $;REPOSITORY_ROOT$;/output_repository/sra2fastq/$;PIPELINEID$;_default/sra2fastq.list
+;; Input 1 to use bwa-mem instead of bwa-aln
 $;USE_MEM$; = 0
 ;;Mismatch Penalty.
 $;MISMATCH_PENALTY$; = 3
@@ -16,8 +16,8 @@ $;MAX_GAP_EXTNS$; = -1
 $;GAP_OPEN_PENALTY$; = 11
 ;;Gap Extension Penality.
 $;GAP_EXTN_PENALTY$; = 4
-;;Maximum Number of Threads. Multi-threading mode.
-$;MAX_THREADS$; = 1
+;;Maximum Number of Threads. Multi-threading mode.  Must equal the thread count set in PASSTHROUGH param.
+$;MAX_THREADS$; = 16
 ;; This is the maximum number of alignments for each read.
 $;MAX_ALIGN$; = 1
 ;; Minimum threshold length of soft-clipping in reads to keep read
@@ -25,7 +25,7 @@ $;SOFTCLIP_MIN$; = 24
 ;; Specify whether to filter out paired-end reads where both ends are mapped
 $;KEEP_MM$; = 1
 ;; If input file is a BAM file, indicates if file is for paired-end or single-end reads
-$;PAIRED$; =1
+$;PAIRED$; =
 
 ;; Argments for the various bwa utilities (aln, sampe, samse)
 $;BWA_ARGS$; =
@@ -36,20 +36,20 @@ $;SAM_SORT_ARGS$; =
 
 [input]
 ;; Input is a reference fasta that has been indexed by BWA.  Fasta reference must be in the same directory as the indexing files.  INPUT_FILE_LIST accepts a list of reference fasta files
-$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/lgt_build_bwa_index/$;PIPELINEID$;_refseq/lgt_build_bwa_index.fsa.list 
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/lgt_build_bwa_index/$;PIPELINEID$;_recipient/lgt_build_bwa_index.fsa.list
 $;INPUT_FILE$; =
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
 $;INPUT_EXTENSION$; =
 
 [output]
-$;OUTPUT_TOKEN$; = mb
+$;OUTPUT_TOKEN$; = recipient
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;SAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.sam.list
 $;BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.bam.list
 
 [component]
-$;COMPONENT_NAME$; = lgt_bwa
+$;COMPONENT_NAME$; = bwa_aln
 $;DESCRIPTION$; = Lateral Genome Transfer
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
@@ -77,4 +77,5 @@ $;PIPELINEID$; =
 $;PROJECT_CONFIG$;=
 
 [dce]
-$;PASSTHROUGH$;= -l mem_free=5G
+$;QUEUE$;=threaded.q
+$;PASSTHROUGH$;= -l mem_free=10G -pe thread 16
