--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/bwa_aln.validation_d.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/bwa_aln.validation_d.config
@@ -3,8 +3,8 @@ classification = LGT
 
 [parameters]
 ;; Path to the query file or list to be aligned
-$;QUERY_FILE$; = $;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt_recipient/filter_dups_lc_seqs.bam.list
-;;Input 1 to use bwa-mem instead of bwa-aln
+$;QUERY_FILE$; = $;REPOSITORY_ROOT$;/output_repository/lgt_create_validated_bam/$;PIPELINEID$;_lgt_d/lgt_create_validated_bam.bam.list
+;; Input 1 to use bwa-mem instead of bwa-aln
 $;USE_MEM$; = 0
 ;;Mismatch Penalty.
 $;MISMATCH_PENALTY$; = 3
@@ -23,7 +23,7 @@ $;MAX_ALIGN$; = 1
 ;; Minimum threshold length of soft-clipping in reads to keep read
 $;SOFTCLIP_MIN$; = 24
 ;; Specify whether to filter out paired-end reads where both ends are mapped
-$;KEEP_MM$; = 1
+$;KEEP_MM$; = 0
 ;; If input file is a BAM file, indicates if file is for paired-end or single-end reads
 $;PAIRED$; =1
 
@@ -36,20 +36,20 @@ $;SAM_SORT_ARGS$; =
 
 [input]
 ;; Input is a reference fasta that has been indexed by BWA.  Fasta reference must be in the same directory as the indexing files.  INPUT_FILE_LIST accepts a list of reference fasta files
-$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/lgt_build_bwa_index/$;PIPELINEID$;_refseq/lgt_build_bwa_index.fsa.list 
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/lgt_build_bwa_index/$;PIPELINEID$;_donor/lgt_build_bwa_index.fsa.list
 $;INPUT_FILE$; =
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
 $;INPUT_EXTENSION$; =
 
 [output]
-$;OUTPUT_TOKEN$; = lgt
+$;OUTPUT_TOKEN$; = validation_d
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;SAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.sam.list
 $;BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.bam.list
 
 [component]
-$;COMPONENT_NAME$; = lgt_bwa
+$;COMPONENT_NAME$; = bwa_aln
 $;DESCRIPTION$; = Lateral Genome Transfer
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
