--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_mpileup.lgt_refseq.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_mpileup.lgt_refseq.config
@@ -6,7 +6,7 @@ classification = LGT
 $;FASTA_REFERENCE$; =
 
 [input]
-$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/lgt_bwa/$;PIPELINEID$;_lgt/lgt_bwa.bam.list
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/bwa_aln/$;PIPELINEID$;_lgt/bwa_aln.bam.list
 ;; A BAM file that has been filtered of duplicated and low-complexity reads
 $;INPUT_FILE$; =
 $;INPUT_DIRECTORY$; =
