--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.recipient_only.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.recipient_only.config
@@ -1,13 +1,13 @@
-[lgt_bwa recipient]
+[bwa_aln recipient]
 $;INPUT_FILE$; = $;HOST_REFERENCE$;
 $;INPUT_FILE_LIST$; = $;HOST_LIST$;
 $;KEEP_MM$; = 0
 
-[lgt_bwa lgt]
+[bwa_aln lgt]
 $;INPUT_FILE$; = $;REFSEQ_REFERENCE$;
 $;INPUT_FILE_LIST$; = $;REFSEQ_LIST$;
 
-[lgt_bwa validation_r]
+[bwa_aln validation_r]
 $;INPUT_FILE$; = $;HOST_REFERENCE$;
 $;INPUT_FILE_LIST$; = $;HOST_LIST$;
 
