--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_Post_Analysis/gather_lgtseek_files.default.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_Post_Analysis/gather_lgtseek_files.default.config
@@ -12,8 +12,8 @@ $;LGT_DONOR_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/
 $;LGT_RECIPIENT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt_recipient/filter_dups_lc_seqs.bam.list
 $;ALL_DONOR_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_all_donor/filter_dups_lc_seqs.bam.list
 $;ALL_RECIPIENT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_all_recipient/filter_dups_lc_seqs.bam.list
-$;DONOR_LGT_BLAST_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/lgt_bwa/$;PIPELINEID$;_validation_d/lgt_bwa.bam.list
-$;RECIPIENT_LGT_BLAST_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/lgt_bwa/$;PIPELINEID$;_validation_r/lgt_bwa.bam.list
+$;DONOR_LGT_BLAST_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/bwa_aln/$;PIPELINEID$;_validation_d/bwa_aln.bam.list
+$;RECIPIENT_LGT_BLAST_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/bwa_aln/$;PIPELINEID$;_validation_r/bwa_aln.bam.list
 ;; Path to various mpileup output files
 $;LGT_RECIPIENT_MPILEUP$;=$;REPOSITORY_ROOT$;/output_repository/lgt_mpileup/$;PIPELINEID$;_lgt_recipient/lgt_mpileup.list
 $;LGT_DONOR_MPILEUP$;=$;REPOSITORY_ROOT$;/output_repository/lgt_mpileup/$;PIPELINEID$;_lgt_donor/lgt_mpileup.list
