--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/bwa_aln.validation_r.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/bwa_aln.validation_r.config
@@ -2,9 +2,9 @@
 classification = LGT
 
 [parameters]
-;; Path to the query file to be aligned
-$;QUERY_FILE$; =
-;; Input 1 to use bwa-mem.  Input 0 or leave blank to use bwa_aln
+;; Path to the query file or list to be aligned
+$;QUERY_FILE$; = $;REPOSITORY_ROOT$;/output_repository/lgt_create_validated_bam/$;PIPELINEID$;_lgt_r/lgt_create_validated_bam.bam.list
+;; Input 1 to use bwa-mem instead of bwa-aln
 $;USE_MEM$; = 0
 ;;Mismatch Penalty.
 $;MISMATCH_PENALTY$; = 3
@@ -23,9 +23,9 @@ $;MAX_ALIGN$; = 1
 ;; Minimum threshold length of soft-clipping in reads to keep read
 $;SOFTCLIP_MIN$; = 24
 ;; Specify whether to filter out paired-end reads where both ends are mapped
-$;KEEP_MM$; = 1
+$;KEEP_MM$; = 0
 ;; If input file is a BAM file, indicates if file is for paired-end or single-end reads
-$;PAIRED$; =
+$;PAIRED$; =1
 
 ;; Argments for the various bwa utilities (aln, sampe, samse)
 $;BWA_ARGS$; =
@@ -36,19 +36,20 @@ $;SAM_SORT_ARGS$; =
 
 [input]
 ;; Input is a reference fasta that has been indexed by BWA.  Fasta reference must be in the same directory as the indexing files.  INPUT_FILE_LIST accepts a list of reference fasta files
-$;INPUT_FILE_LIST$; =
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/lgt_build_bwa_index/$;PIPELINEID$;_recipient/lgt_build_bwa_index.fsa.list
 $;INPUT_FILE$; =
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
 $;INPUT_EXTENSION$; =
 
 [output]
-$;OUTPUT_TOKEN$; = default
+$;OUTPUT_TOKEN$; = validation_r
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;SAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.sam.list
 $;BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.bam.list
 
 [component]
-$;COMPONENT_NAME$; = lgt_bwa
+$;COMPONENT_NAME$; = bwa_aln
 $;DESCRIPTION$; = Lateral Genome Transfer
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
@@ -74,3 +75,6 @@ $;PIPELINEID$; =
 
 [include]
 $;PROJECT_CONFIG$;=
+
+[dce]
+$;PASSTHROUGH$;= -l mem_free=5G
