--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgtseek_classify_reads.default.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgtseek_classify_reads.default.config
@@ -3,8 +3,8 @@ classification = LGT
 
 [parameters]
 ;; Paths to list files containing filtered BAM files
-$;DONOR_FILE_LIST$;=$;REPOSITORY_ROOT$;/output_repository/lgt_bwa/$;PIPELINEID$;_donor/lgt_bwa.bam.list
-$;RECIPIENT_FILE_LIST$;=$;REPOSITORY_ROOT$;/output_repository/lgt_bwa/$;PIPELINEID$;_recipient/lgt_bwa.bam.list
+$;DONOR_FILE_LIST$;=$;REPOSITORY_ROOT$;/output_repository/bwa_aln/$;PIPELINEID$;_donor/bwa_aln.bam.list
+$;RECIPIENT_FILE_LIST$;=$;REPOSITORY_ROOT$;/output_repository/bwa_aln/$;PIPELINEID$;_recipient/bwa_aln.bam.list
 
 ;; Alternative, just provide two BAM files
 $;DONOR_FILE$;=
@@ -15,7 +15,7 @@ $;INPUT_FILE_LIST$; =
 $;INPUT_FILE$; =
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
-$;INPUT_EXTENSION$; = 
+$;INPUT_EXTENSION$; =
 
 [output]
 $;OUTPUT_TOKEN$; = default
@@ -28,7 +28,7 @@ $;LGT_DONOR_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;LGT_DO
 $;LGT_RECIPIENT_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;LGT_RECIPIENT_TOKEN$;.bam.list
 $;ALL_DONOR_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;ALL_DONOR_TOKEN$;.bam.list
 $;ALL_RECIPIENT_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;ALL_RECIPIENT_TOKEN$;.bam.list
-$;LGT_INFECTED_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.lgt_infected_recipient.bam.list 
+$;LGT_INFECTED_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.lgt_infected_recipient.bam.list
 
 [component]
 $;COMPONENT_NAME$; = lgtseek_classify_reads
