--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.config
@@ -1,8 +1,8 @@
-[lgt_bwa donor]
+[bwa_aln donor]
 $;INPUT_FILE$; = $;DONOR_REFERENCE$;
 $;INPUT_FILE_LIST$; = $;DONOR_LIST$;
 
-[lgt_bwa recipient]
+[bwa_aln recipient]
 $;INPUT_FILE$; = $;HOST_REFERENCE$;
 $;INPUT_FILE_LIST$; = $;HOST_LIST$;
 
