--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.donor_only.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.donor_only.config
@@ -1,9 +1,9 @@
-[lgt_bwa donor]
+[bwa_aln donor]
 $;INPUT_FILE$; = $;DONOR_REFERENCE$;
 $;INPUT_FILE_LIST$; = $;DONOR_LIST$;
 $;QUERY_FILE$; = $;REPOSITORY_ROOT$;/output_repository/sra2fastq/$;PIPELINEID$;_default/sra2fastq.list
 
-[lgt_bwa validation_d]
+[bwa_aln validation_d]
 $;INPUT_FILE$; = $;DONOR_REFERENCE$;
 $;INPUT_FILE_LIST$; = $;DONOR_LIST$;
 
