added new script to determine final LGT.  Lots of other changes

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/determine_final_lgt.final.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/determine_final_lgt.final.config
@@ -2,23 +2,30 @@
 classification = LGT
 
 [parameters]
+;; Type of reference reads were aligned to.  Choose either 'donor' or 'recipient'
+$;REFERENCE_TYPE$; = 'donor'
 
 [input]
-$;INPUT_FILE_LIST$; =
-;; BAM file
+;; Blast m8 hits pointing to Eukaryota lineage
+$;EUK_HITS$; = $;REPOSITORY_ROOT$;/output_repository/blast_lgt_finder/$;PIPELINEID$;_lgt_d/filtered_m8.list
+;; Blast m8 hits pointing to Bacteria lineage
+$;BAC_HITS$; = $;REPOSITORY_ROOT$;/output_repository/blast_lgt_finder/$;PIPELINEID$;_lgt_r/filtered_m8.list
+;; List of lists containing reads that aligned to the reference.
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/get_aligned_reads/$;PIPELINEID$;_lgt_donor/$;COMPONENT_NAME$;.list
 $;INPUT_FILE$; =
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
-$;INPUT_EXTENSION$; =
+$;INPUT_EXTENSION$; = raw
 
 [output]
-$;OUTPUT_TOKEN$; = defaul
+$;OUTPUT_TOKEN$; = default
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-$;ALIGNED_READS_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.list
+$;SCORES_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.scores.list
+$;OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/lgt_finder.list
 
 [component]
-$;COMPONENT_NAME$; = get_aligned_reads_list
-$;DESCRIPTION$; = Get list of reads that mapped to the reference in the BAM input file
+$;COMPONENT_NAME$; = determine_final_lgt
+$;DESCRIPTION$; = Use Blast m8 hits per lineage to prune list of putative LGT hits
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
 
