--- a/package-lgtseek/docs/determine_final_lgt.config
+++ b/package-lgtseek/docs/determine_final_lgt.config
@@ -2,37 +2,37 @@
 classification = LGT
 
 [parameters]
-;; List file that contains one trace and one clone hits file each, containing LGT hits and LCA info
-$;LGT_HITS$;= $;REPOSITORY_ROOT$;/output_repository/determine_final_lgt/$;PIPELINEID$;_final/lgt_finder.list
+;; Type of reference reads were aligned to.  Choose either 'donor' or 'recipient'
+$;REFERENCE_TYPE$; =
 
 [input]
-;; A filtered BAM file
-$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt_donor/filter_dups_lc_seqs.bam.list
+;; Blast m8 hits pointing to Eukaryota lineage
+$;EUK_HITS$; =
+;; Blast m8 hits pointing to Bacteria lineage
+$;BAC_HITS$; =
+;; List of lists containing reads that aligned to the reference.
+$;INPUT_FILE_LIST$; =
 $;INPUT_FILE$; =
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
 $;INPUT_EXTENSION$; = raw
 
 [output]
-$;OUTPUT_TOKEN$; = lgt_d
+$;OUTPUT_TOKEN$; = default
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-$;BAM_LIST$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;/$;COMPONENT_NAME$;.bam.list
+$;SCORES_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.scores.list
+$;OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.lgt.list
 
 [component]
-$;COMPONENT_NAME$; = lgt_create_validated_bam
-$;DESCRIPTION$; = Validate the LGT Finder results and create a BAM file
+$;COMPONENT_NAME$; = determine_final_lgt
+$;DESCRIPTION$; = Use Blast m8 hits per lineage to prune list of putative LGT hits
 $;WORKFLOW_REPOSITORY$; = $;REPOSITORY_ROOT$;/workflow/runtime/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;PIPELINE_TOKEN$; = unnamed
-;;
-;;To only produce raw blast output add;
-;;$;SKIP_WF_COMMAND$;=add create bsml list,convert btab to bsml,store config params,dtd validation
-;;
-$;SKIP_WF_COMMAND$;=
 
 ;The version,revision,tag here is set by an interpolated CVS tag
-$;VERSION$; = $Name$
+$;VERSION$; = 2.0
 $;RELEASE_TAG$; = $Name$
-$;REVISION$;            = $Revision: 6529 $
+$;REVISION$;            = $Revision: 5801 $
 
 $;TEMPLATE_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.xml
 $;ITERATOR1$; = i1
