--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_create_validated_bam.lgt_r.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/lgt_create_validated_bam.lgt_r.config
@@ -3,7 +3,7 @@ classification = LGT
 
 [parameters]
 ;; List file that contains one trace and one clone hits file each, containing LGT hits and LCA info
-$;LGT_HITS$;= $;REPOSITORY_ROOT$;/output_repository/blast_lgt_finder/$;PIPELINEID$;_lgt_r/lgt_finder.list
+$;LGT_HITS$;= $;REPOSITORY_ROOT$;/output_repository/determine_final_lgt/$;PIPELINEID$;_final/lgt_finder.list
 
 [input]
 ;; A filtered BAM file
