starting to work on the pipeline creation script

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.donor_only.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.donor_only.config
@@ -7,7 +7,15 @@ $;QUERY_FILE$; = $;REPOSITORY_ROOT$;/output_repository/sra2fastq/$;PIPELINEID$;_
 $;INPUT_FILE$; = $;DONOR_REFERENCE$;
 $;INPUT_FILE_LIST$; = $;DONOR_LIST$;
 
+[blast_lgt_finder lgt_d]
+$;LINEAGE$; = $;EUK_LINEAGE$;
+
+[blast_lgt_finder lgt_r]
+$;LINEAGE$; = $;BAC_LINEAGE$;
+
 [global]
 ;; Donor fasta reference
 $;DONOR_REFERENCE$; =
 $;DONOR_LIST$; =
+$;BAC_LINEAGE$; =
+$;EUK_LINEAGE$; =
