--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.lgt_infected.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.lgt_infected.config
@@ -6,6 +6,12 @@ $;INPUT_FILE_LIST$; = $;DONOR_LIST$;
 $;INPUT_FILE$; = $;HOST_REFERENCE$;
 $;INPUT_FILE_LIST$; = $;HOST_LIST$;
 
+[blast_lgt_finder lgt_d]
+$;LINEAGE$; = $;EUK_LINEAGE$;
+
+[blast_lgt_finder lgt_r]
+$;LINEAGE$; = $;BAC_LINEAGE$;
+
 [global]
 ;; Host/recipient fasta reference
 $;HOST_REFERENCE$; =
@@ -13,3 +19,5 @@ $;HOST_LIST$; =
 ;; Donor fasta reference
 $;DONOR_REFERENCE$; =
 $;DONOR_LIST$; =
+$;BAC_LINEAGE$; =
+$;EUK_LINEAGE$; =
