--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.recipient_only.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.recipient_only.config
@@ -11,6 +11,12 @@ $;INPUT_FILE_LIST$; = $;REFSEQ_LIST$;
 $;INPUT_FILE$; = $;HOST_REFERENCE$;
 $;INPUT_FILE_LIST$; = $;HOST_LIST$;
 
+[blast_lgt_finder lgt_d]
+$;LINEAGE$; = $;EUK_LINEAGE$;
+
+[blast_lgt_finder lgt_r]
+$;LINEAGE$; = $;BAC_LINEAGE$;
+
 [global]
 ;; Host/recipient fasta reference
 $;HOST_REFERENCE$; =
@@ -18,3 +24,5 @@ $;HOST_LIST$; =
 ;; Refseq fasta sequence
 $;REFSEQ_REFERENCE$; =
 $;REFSEQ_LIST$; =
+$;BAC_LINEAGE$; =
+$;EUK_LINEAGE$; =
