fixing bad output token

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/determine_final_lgt.final.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/determine_final_lgt.final.config
@@ -18,7 +18,7 @@ $;INPUT_DIRECTORY$; =
 $;INPUT_EXTENSION$; = raw
 
 [output]
-$;OUTPUT_TOKEN$; = default
+$;OUTPUT_TOKEN$; = final
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;SCORES_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.scores.list
 $;OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/lgt_finder.list
